--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.class
 *.log
+*.swp
 
 # sbt specific
 dist/*
@@ -11,3 +12,4 @@ project/plugins/project/
 
 # Scala-IDE specific
 .scala_dependencies
+.history
